Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>TITLE</title>
-    <link 
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body></body>
 </html>
